--- a/sass/_core.scss
+++ b/sass/_core.scss
@@ -2,7 +2,7 @@
 $bg-color: hsl(225, 100%, 94%);
 $card-bg-color: #fff;
 $font: 'Red Hat Display', sans-serif;
-$plan-bg: hsl(225, 100%, 98%);
+$plan-bg: #F8F9FE;
 $payment-btn-bg: hsl(245, 75%, 52%);
 $font-color: hsl(224, 23%, 55%);
 $active-change: #9B97E1;
